# SVD-LLM

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: technical_report.md  technical_report.tex
docs/plans/: 2026-03-12-repo-hardening-design.md  2026-03-12-repo-hardening-plan.md  2026-03-12-svd-llm-reproduction.md
lm_eval_tasks/mathqa_local/: mathqa_local.yaml
scripts/: collect_results.py  compress.py  eval_model.py  finetune.py  run_all_experiments.sh  run_downstream_all.sh  run_experiments_gpu02.sh  run_experiments_gpu2.sh  run_gsm8k_all.sh  run_missing_tasks.sh  run_svd_llm_experiments.sh
src/compress/: compress_model.py  sequential_update.py  whitening.py
src/data/: alpaca.py  calibration.py
src/eval/: downstream.py  perplexity.py
src/finetune/: sequential_lora.py
src/model/: loader.py  replace.py
tests/: conftest.py  test_calibration.py  test_downstream.py  test_e2e.py  test_model_loader.py  test_perplexity.py  test_replace.py  test_sequential.py  test_whitening.py
