[project]
name = "svd-llm"
version = "0.1.0"
description = "SVD-LLM reproduction from paper"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: requires GPU and model weights (deselect with '-m not integration')",
]
